feat(SSM-Inventory) Add SSM Inventory
